# stoilo

./: .gitignore  Makefile  docker-compose.yml
diploma/: diploma.aux  diploma.bcf  diploma.blg  diploma.fdb_latexmk  diploma.fls  diploma.run.xml  diploma.toc
proto/: protobuf_compiler.sh
proto/task_service/: task_service.proto
python_lib/: README.md  pyproject.toml
python_lib/examples/: ddl.ipynb  low_level.ipynb
python_lib/src/gened_proto/task_service/: task_service_pb2_grpc.py
python_lib/src/stoilo/: __init__.py
python_lib/src/stoilo/ddl/: __init__.py  dpbgd.py
python_lib/src/stoilo/low_level/: __init__.py  connection.py  flavors.py  redundancy.py  task.py  task_result.py  validators.py
server/daemons/: add_demons.xml
server/daemons/raboshka_assimilator/: __main__.py  assimilator.py  cli_parser.py  database.py
server/daemons/raboshka_validator/: __main__.py  database.py  utils.py  validator.py
server/daemons/raboshka_work_generator/: __main__.py  database.py  task_service.py  work_creator.py
server/deploy/: Dockerfile  add_daemons.py  entrypoint.sh  requirements.txt  supervisord.conf
server/deploy/db/: 002_adjust_sizes.sql  (+1 more)
text/: diploma.bbl-SAVE-ERROR  diploma.tex  refs.bib
text/figures/: .$stoilo_overall.drawio.bkp
volunteer/: Dockerfile  bashrc  entrypoint.sh
workers/: project.xml
workers/devops/: app_freezer.py  dependencies.yaml  test_bin_raboshka.py
workers/flavor_specs/: raboshka_39754ae2661e5b7b2b776bcd8e4717cc.yaml
workers/supplied_wrappers/: downloader.sh  wrapper_26014_i686-apple-darwin  wrapper_26018_linux_arm64
(+14 files in other folders)
